# django-vite-react

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
frontend/src/: vite-env.d.ts
frontend/src/components/todo/: App.tsx
mysite/: settings.py  settings_local.example  settings_local.py  settings_prod.py  urls.py
pages/: urls.py  views.py
pages/templates/pages/: home.html  react-base.html  vite-app.html
static/frontend/src/: App.tsx
static/frontend/src/components/todo/: main.tsx
todo/: urls.py  views.py
todo/templates/todo/: index.html
todolist/: settings.py
